# pptx-templatex

./: .gitignore  LICENSE  MANIFEST.in  README.ja.md  README.md  pyproject.toml  test_installation.sh
.github/workflows/: ci.yml
examples/: config.json  example_usage.py
pptx_templatex/: __init__.py  cli.py  exceptions.py  placeholder_replacer.py  slide_copier.py  template_engine.py
tests/: __init__.py  test_cli.py  test_placeholder_replacer.py  test_template_engine.py
tools/: analyze_text_format.py  debug_layout.py
